syntax = "proto3";

service UserService {
  rpc CreateUser (CreateUserServiceRequest) returns (EmptyResponse) {}
  rpc UpdateUser (UpdateUserServiceRequest) returns (EmptyResponse) {}
  rpc DeleteUser (DeleteUserServiceRequest) returns (EmptyResponse) {}
}

message CreateUserServiceRequest {
  string id = 1;
  string name = 2;
  string lastName = 3;
  string email = 4;
}

message UpdateUserServiceRequest {
  string id = 1;
  string name = 2;
  string lastName = 3;
  string email = 4;
}

message DeleteUserServiceRequest {
  string id = 1;
}

message EmptyResponse {}
